--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 body{
     background-color: #bad80a;
+    display: flex;
+    justify-content: center;
 }
 h1{
-    position: absolute;
-    top: 50%;
-    left: 50%;
+    
     font-family: "Comic Sans MS";
     font-size: 50pt;
 }
