--- a/style.css
+++ b/style.css
@@ -53,14 +53,10 @@ nav a{
     background-color: #acbc11;
     padding: 10pt;
 }
+
 .left{
 width: 30%;
 }
-.left img{
-    margin-left: 5vw;
-    width: 50%;
-}
-
 
 
 .right{
@@ -70,22 +66,36 @@ width: 30%;
     flex-direction: row;
 }
 
-.right img{
+.right .image{
     margin: 0 20pt;
     width:30%;
-    height:fit-content;
-}
+    height: 100%;
+    background-image: url(bio-img.jpg);
+    background-size:cover;
+    background-repeat: no-repeat;
+background-position: center;}
 .right p{
     width: 70%;
+    padding: 0;
+    margin: 0;
 }
 
 footer{
-    height: 15vh;
+    height: 200px;
     width: 100%;
-    overflow: hidden;
+    background-image: url(foot2.jpeg);
+    background-repeat: repeat-x;
+    background-position: center;
 }
 
-footer img{
-width: 100%;    
-overflow: hidden;
+
+
+footer h1{
+    text-align: center;
+    font-family: "Comic Sans MS",sans-serif;
+    font-size: 6vw;
+    color: purple;
+    height: 100%;
+    line-height: normal;
+    padding-top: 3vh;
 }
