--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ background-position: center;}
 footer{
     height: 200px;
     width: 100%;
-    background-image: url(foot2.jpeg);
+    background-image: url(https://www.clarkpodiatry.com/wp-content/uploads/2018/01/FHM-5-Numb-toes-during-exercise.jpg);
     background-repeat: repeat-x;
     background-position: center;
 }
