--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ header{
     flex-direction: column;
     margin-top: 5vh;
 }
+
 h1{
     font-family: alternate-gothic-no-1-d, sans-serif;
     margin: 0;
@@ -20,27 +21,35 @@ h1{
     text-transform: uppercase;
     text-align: left;
 }
+
 h2{
     font-size: 60pt;
     font-family: alternate-gothic-no-1-d, sans-serif;
     font-weight: bold;
     margin: 0;
-
 }
+hr{
+    border: #acbc11 3px solid;
+    width: 100%;
+}
+
 nav{
     padding: 0;
     margin: 0;
     font-size: 20pt;
 }
+
 nav ul{
     list-style: none;
     margin: 0;
     padding: 0;
 }
+
 nav a{
     text-decoration: none;
     color: inherit;
 }
+
 .content{
     font-size: 16pt;
     font-family: alternate-gothic-no-2-d, sans-serif;
@@ -67,13 +76,16 @@ width: 30%;
 }
 
 .right .image{
+    display: flex;
     margin: 0 20pt;
     width:30%;
     height: 100%;
     background-image: url(bio-img.jpg);
     background-size:cover;
     background-repeat: no-repeat;
-background-position: center;}
+background-position: center;
+}
+
 .right p{
     width: 70%;
     padding: 0;
@@ -88,8 +100,6 @@ footer{
     background-position: center;
 }
 
-
-
 footer h1{
     text-align: center;
     font-family: "Comic Sans MS",sans-serif;
@@ -98,4 +108,26 @@ footer h1{
     height: 100%;
     line-height: normal;
     padding-top: 3vh;
+}
+
+@media only screen and (max-width: 1000px){
+    .content{flex-direction: column;
+    };
+    .left{
+        flex-direction: column;
+        width: 100%;
+    }
+    .right{
+        flex-direction: column;
+        width: 100%;
+    }
+    .right p{
+        width: 100%;
+    }
+    .right .image{
+        width: 100%;
+        height: 300px;
+        margin: 0;
+        background-position: top;
+    }
 }
