--- a/style2.css
+++ b/style2.css
@@ -45,7 +45,6 @@ left: 15.2%;
 position: absolute;
 }
 .name .rule{
-    border-top: 3px solid #84a1c9;
     width: 28.2%;
     height: 1px;
     position: absolute;
@@ -96,3 +95,63 @@ margin-left: 1%;
 .col7 p{
     top: 40%;
 }
+@media only screen and (max-width: 400px) {} /* smaller than mobile */ 
+@media only screen and (max-width: 750px) {} /* smaller than tablet */ 
+@media only screen and (max-width: 1200px) {
+    .column{
+        width: 100%;
+        height: 14.28%;
+    }
+    .rule{
+        width: 100%;
+    }
+    .name .rule{
+        width: 100%;
+    }
+    .col1{
+        position: relative;
+        top: 0;
+    }
+    .col2{
+        width: 0;
+        display: none;
+    }
+    .col3, .col4, .col5, .col6, .col7{
+        width: 50%;
+        height: 25%;
+        float: left;
+        padding-left: 0;
+    }
+    .col5{
+    }
+    .name .fogarty{
+        left: 40vw;
+    }
+    .name{
+        height: 200px;
+        width: 100%;
+        position: static;
+        top: 0;
+        margin: auto;
+    }
+    .col5 .rule{
+        top: 0;
+    }
+    .col5 .p{
+        top: 0;
+        position: static;
+        margin: 0;
+        padding: 0;
+    }
+    .col6 .p{
+        top: 0;
+    }
+    .col4{
+        margin: 150px 0 0 0;
+        background-size:500px;
+        background-position: 50%;
+        background-repeat: no-repeat;
+        margin-left: 0;
+        height: 30%;
+    }
+} /* smaller than desk */ 
