--- a/css/style2.css
+++ b/css/style2.css
@@ -69,9 +69,10 @@ nav a {
 }
 p{
     position: relative;
+
 }
 .col4{
-background-image: url(/images/portrait1.jpg);
+background-image: url(portrait1.jpg);
 background-size:500px;
 background-position:50% 14vh;
 background-repeat: no-repeat;
@@ -121,7 +122,7 @@ margin-left: 1%;
         float: left;
         padding-left: 0;
     }
- 
+   
     .name .fogarty{
         left: 40vw;
     }
