--- a/css/gpstyle.css
+++ b/css/gpstyle.css
@@ -11,11 +11,10 @@ body{
     margin: auto;
     position: relative;
     font-size: 8pt;
-    overflow-x: hidden;
 
 }
 section{
-    height: 100vh;
+    height: 110vh;
     width: 100%;
     background-size: contain;
     background-position: top;
@@ -31,7 +30,7 @@ p img{
 }
 section p{
     position: relative;
-    top:90%;
+    top:90vh;
     column-count: 3;
     column-gap: 15px;
     padding: 0 100px;
