--- a/css/gpstyle.css
+++ b/css/gpstyle.css
@@ -9,12 +9,12 @@ body{
     max-width: 1200px;
     padding: 0;
     margin: auto;
-    position: relative;
+    position: static;
     font-size: 8pt;
 
 }
 section{
-    height: 110vh;
+    height: 120vh;
     width: 100%;
     background-size: contain;
     background-position: top;
@@ -24,17 +24,30 @@ section{
     position:relative;
 }
 p img{
-    height: 70px;
+    height: 50pt;
     float: left;
     margin: 0 10px 10px 0;
 }
+.quote{
+    width: 60%;
+    left:20%;
+    position: relative;
+}
+footer{
+    height: 30vh;
+
+}
+.wateringhole p{
+    margin-top: -250pt;
+}
 section p{
     position: relative;
-    top:90vh;
+    top:100vh;
     column-count: 3;
     column-gap: 15px;
     padding: 0 100px;
-
+    margin-bottom: 200pt;
+    z-index: 2;
 }
 
 .junebug{
@@ -54,6 +67,7 @@ section p{
 }
 .junebug img{
     width: 60%;
+    height: fit-content;
 }
 .titlerow p{
     width: 40%;
@@ -99,9 +113,17 @@ section p{
 
 }
 @media only screen and (max-width: 1200px){
+    .gpcontainer{
+        width: 100%;
+    }
+    section{
+        width: 100%;
+        height: 120vh;
+    }
     section p{
         column-count: 2;
         padding: 0 50px;
+        top: 80vh
     }
     .junebug .titlerow{
         flex-direction: column;
@@ -109,28 +131,37 @@ section p{
         height: 20vh;
         gap: 0;
     }
+    
     .titlerow p{
         margin-top: -70px;
+        width: 60%;
     }
     .titlerow img{
-        padding: 0 50px;
+        padding-left: 50px;
+    }
+    footer{
+        height: 50vh;
     }
 }
 @media only screen and (max-width: 800px){
-.gpcontainer{
-    width: 100%;
-}
+
 
 section{
-    width: 100%;
-    height: 120vh;
-    
+height: 150vh;   
+background-size: cover; 
+background-position: center;
 }
 
 section p{
     column-count: 1;
-    top: 100vh;
+    top: 135vh;
 
+}
+footer{
+    height: 80vh;
+}
+.quote{
+    top: 30vh;
 }
     .junebug{
         background-image: url(../gpphotos/m_junebug.jpg);
