--- a/gordonparks/css/gpstyle.css
+++ b/gordonparks/css/gpstyle.css
@@ -3,6 +3,7 @@
 }
 body{
     background-color: black;
+    overflow-x: hidden;
 }
 .gpcontainer{
     width: 70vw;
@@ -56,7 +57,7 @@ section{
     float: left;
     margin: 0 10px 5px 0;
     z-index: 10;
-
+    transition: all 0.5s ease-in-out;
 }
 .caps:hover{
     filter: blur(5px);
