--- a/style.css
+++ b/style.css
@@ -126,11 +126,13 @@ footer h1{
     padding-top: 3vh;
 }
 
-@media only screen and (max-width: 1000px){
+@media only screen and (max-width: 1200px){
     .content{flex-direction: column;
     };
     nav{
         width: 100%;
+        font-size: 1.3em;
+
     }
     .left{
         flex-direction: column;
@@ -148,5 +150,67 @@ footer h1{
         height: 300px;
         margin: 0;
         background-position: top;
+    }
+    .content{
+        font-size: 1.3em;
+    }
+        ;
+}
+@media only screen and (max-width: 800px){
+    .content{flex-direction: column;
+    };
+    nav{
+        width: 100%;
+        font-size: 2.2em;
+
+    }
+    .left{
+        flex-direction: column;
+        width: 100%;
+    }
+    .right{
+        flex-direction: column;
+        width: 100%;
+    }
+    .right p{
+        width: 100%;
+    }
+    .right .image{
+        width: 100%;
+        height: 300px;
+        margin: 0;
+        background-position: top;
+    }
+    .content{
+        font-size: 1.8em
+    }
+}
+@media only screen and (max-width:400px){
+    .content{flex-direction: column;
+    };
+    nav{
+        width: 100%;
+        font-size: 2.5em;
+
+    }
+    .left{
+        flex-direction: column;
+        width: 100%;
+    }
+    .right{
+        flex-direction: column;
+        width: 100%;
+    }
+    .right p{
+        width: 100%;
+    }
+    .right .image{
+        width: 100%;
+        height: 300px;
+        margin: 0;
+        background-position: top;
+    }
+    .content{
+        font-size: 2.1em
     }
 }
