--- a/gordonparks/css/gpstyle.css
+++ b/gordonparks/css/gpstyle.css
@@ -11,11 +11,11 @@ body{
     padding: 0;
     margin: auto;
     position: static;
-    font-size: 8pt;
+    font-size: 1.1em;
 
 }
 section{
-    height: 120vh;
+    height: 140vh;
     width: 100%;
     background-size: contain;
     background-position: top;
@@ -53,7 +53,7 @@ section{
 
 /* Drop caps */
 .caps{
-    height: 50pt;
+    height: 80pt;
     float: left;
     margin: 0 10px 5px 0;
     z-index: 10;
@@ -129,17 +129,16 @@ section p{
     position: relative;
     top: 40%;
 }
-.titlerow p{
-    margin-top: 34%;
-}
+
 .junebug img{
-    width: 60%;
+    width: 55%;
     height: fit-content;
 }
 .titlerow p{
-    width: 40%;
+    width: 45%;
     top: 0;
     column-count: 1;
+    margin-top: 34%;
 }
 
 .special{
@@ -231,7 +230,7 @@ section p{
     }
     section{
         width: 100%;
-        height: 120vh;
+        height: 150vh;
     }
     section p{
         column-count: 2;
@@ -269,28 +268,28 @@ section p{
 
 
 section{
-height: 150vh;   
-background-size: cover; 
-background-position: center;
+height: 165vh;   
+background-size: contain; 
+background-position: top;
 }
 
 section p{
     column-count: 1;
-    top: 145vh;
+    top: 118vh;
     padding: 0 50px;
 
 }
 .quote{
     width: 90%;
     left: 5%;
-    top: 45vh;
+    top: 35vh;
 
 }
 .junebug img{
     padding-left: 45px;
 }
 .wateringhole .quote{
-    top: 35vh;
+    top: 25vh;
 }
 .couple p{
     padding: 0 50px;
