--- a/gordonparks/css/gpstyle.css
+++ b/gordonparks/css/gpstyle.css
@@ -77,7 +77,7 @@ section{
 footer{
     height: 200pt;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-evenly;
     width: 60%;
     margin: auto;
@@ -295,6 +295,10 @@ section p{
     left: 5%;
     top: 35vh;
 
+}
+
+.crutchcontainer{
+    padding: 0 50px;
 }
 .junebug{
     height: 130vh;
