--- a/gordonparks/css/gpstyle.css
+++ b/gordonparks/css/gpstyle.css
@@ -274,8 +274,11 @@ section p{
         left: 60%;
         
     }
+    .wateringhole p{
+        margin-top: 0;
+    }
 }
-@media only screen and (max-width: 700px){
+@media only screen and (max-width: 800px){
 
 
 section{
@@ -286,7 +289,7 @@ background-position: top;
 
 section p{
     column-count: 1;
-    top: 100vh;
+    top: 110vh;
     padding: 0 50px;
 
 }
